--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ after_success:
   - pip3 -V
   - pip3 uninstall wheel
   - pip3 install wheel
-  - pip3 install awscli --upgrade --username
+  - pip3 install awscli --upgrade --user
   - export PATH=$PATH:$HOME/.local/bin
   - eval aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin 714398501609.dkr.ecr.us-east-2.amazonaws.com
   - docker tag devio.api:latest $IMAGE_REPO_URL:latest
