--- a/src/DevIO.Business/DevIO.Business.csproj
+++ b/src/DevIO.Business/DevIO.Business.csproj
@@ -6,9 +6,15 @@
 
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="8.6.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.3">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Services\" />
+    <Folder Include="Intefaces\" />
+    <Folder Include="Notificacoes\" />
   </ItemGroup>
 </Project>
